--- a/CSS/carousel.css
+++ b/CSS/carousel.css
@@ -50,7 +50,7 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel .item {
   height: 500px;
-  background-color: #777;
+  background-color: #008080;
 }
 .carousel-inner > .item > img {
   position: absolute;
@@ -90,6 +90,7 @@ body {
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
+  color: #008080
 }
 
 
